--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,15 @@
 <% page_articles.each_with_index do |article, i| %>
   <article>
     <% link_to article do %>
-      <time datetime="<%= article.date.strftime('%Y-%m-%d') %>"><%= article.date.strftime('%d/%m/%Y') %></time>
-      <h2><%= article.title %></h2>
+      <% if article.data.image %>
+        <img src="<%= article.data.image %>" alt="<%= escape_html article.title %>" />
+      <% end %>
+      <time datetime="<%= article.date.strftime('%Y-%m-%d') %>">
+        <%= article.date.strftime('%d/%m/%Y') %>
+      </time>
+      <h1><%= article.title %></h1>
       <%= article.summary %>
+      <p class="more">Lire la suite</p>
     <% end %>
   </article>
 <% end %>
