--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,7 +12,18 @@
   <body>
     <nav><%= link_to image_tag('arnaud-levy.png', alt: 'Arnaud Levy'), '/' %></nav>
     <main>
-      <% if current_article %><h1><%= current_article.title %></h1><% end %>
+      <% if current_article %>
+        <% if current_article.data.image %>
+          <img src="<%= current_article.data.image %>" alt="<%= escape_html current_article.title %>" />
+        <% end %>
+        <time datetime="<%= current_article.date.strftime('%Y-%m-%d') %>">
+          <%= current_article.date.strftime('%d/%m/%Y') %>
+        </time>
+        <h1><%= current_article.title %></h1>
+      <% end %>
+      <% unless table_of_contents.blank? %>
+        <div class="toc"><%= table_of_contents %></div>
+      <% end %>
       <%= yield %>
     </main>
   </body>
