--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -25,7 +25,7 @@ table
   border-spacing: 0
 // End of reset
 
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400i|Quicksand:300,300i,700,700i')
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Quicksand:300,300i,700,700i')
 
 body
   padding: 20px
@@ -36,8 +36,10 @@ main
   padding-top: 100px
 
 a
-  text-decoration: none
   color: black
+
+article a
+  text-decoration: none
 
 h1, h2, h3, p, li, nav, time
   font-family: 'Quicksand', sans-serif
@@ -45,21 +47,36 @@ h1, h2, h3, p, li, nav, time
   line-height: 28px
   font-weight: 300
   color: black
+
 strong
   font-weight: 700
 
-h1, h2
+h1
   font-size: 22px
   line-height: 36px
 
-p
+h2
+  font-size: 18px
+  line-height: 28px
+
+h3
+  font-weight: 700
+
+img 
+  max-width: 100%
+
+h1, h2, h3, p, img, blockquote
   margin-bottom: 20px
 
 time
   font-size: 11px
   font-weight: 700
-  color: #999 
   float: right
+
+ul
+  list-style: square inside
+  ul
+    margin-left: 40px
 
 article
   margin-bottom: 50px
@@ -67,14 +84,28 @@ article
   border-bottom: solid 1px #eee 
 
 blockquote
-  border-left: 5px solid #eee
-  padding-left: 15px
+  border-left: 5px solid black
+  padding: 15px 0 15px 30px
   p
-    font-family: 'Crimson Text', serif
+    font-family: 'Libre Baskerville', serif
     font-style: italic
     font-weight: 400
     font-size: 20px
-    line-height: 30px
+    line-height: 40px
+    margin: 0
+
+.toc
+  margin-bottom: 20px
+  border: solid 1px
+  padding: 40px
+  a
+    font-size: 14px
+    text-decoration: none
+  ul
+    list-style: none
+
+.more
+  font-size: 12px
 
 nav
   position: fixed
