--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -109,5 +109,14 @@ blockquote
 
 nav
   position: fixed
+  .about
+    font-size: 10px
+    font-weight: 700
+    text-transform: uppercase
+    position: fixed
+    right: 20px
+    top: 15px
+    text-decoration: none
+    display: block
   img
     width: 60px
