--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -58,6 +58,7 @@ h1
 h2
   font-size: 18px
   line-height: 28px
+  margin-top: 60px
 
 h3
   font-weight: 700
@@ -96,7 +97,7 @@ blockquote
 
 .toc
   margin-bottom: 20px
-  border: solid 1px
+  border: solid 1px #ddd
   padding: 40px
   a
     font-size: 14px
