--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -121,3 +121,38 @@ nav
     display: block
   img
     width: 60px
+
+.medium
+  display: block
+  font-family: 'Libre Baskerville', serif
+  font-style: italic
+  font-size: 28px
+  text-decoration: none
+  padding: 150px 30px
+  text-align: center
+  background: black
+  color: white
+  margin-bottom: 100px
+  border: 1px solid black
+  &:hover
+    color: black
+    background: white
+
+.follow
+  display: flex
+  flex-wrap: wrap
+  flex-direction: row
+  li
+    list-style: none
+    text-align: center
+    margin: 0 10px 10px 0
+    a
+      display: block
+      background: black
+      padding: 20px 30px
+      text-decoration: none
+      color: white
+      border: 1px solid black
+      &:hover
+        color: black
+        background: white
