--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
+<a href="https://medium.com/arnaudlevy" class="medium">Suivez-moi sur&nbsp;Medium</a>
+
+<p>Archives</p>
+
 <% page_articles.each_with_index do |article, i| %>
   <article>
     <% link_to article do %>
