--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
 <p>
   Entrepreneur depuis 2003 (digitalisation des marques de luxe).
   Maître de conférences en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et par blocs de compétences).
-  Développeur depuis 1999 (hier PHP, ActionScript et Objective-C ; aujourd'hui Ruby on Rails et Javascript).
+  Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et Javascript).
 </p>
 <ul class="follow">
   <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank">LinkedIn</a></li>
