--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@
   <li><a href="http://www.facebook.com/arnaudlevy" target="_blank">Facebook</a></li>
   <li><a href="http://twitter.com/arnaudlevy" target="_blank">Twitter</a></li>
   <li><a href="http://pinterest.com/arnaudlevy/" target="_blank">Pinterest</a></li>
-  <li><a href="https://app.pluralsight.com/profile/arnaud-levy" target="_blank">Pluralsight</a></li>
+  <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank">Pluralsight</a></li>
   <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank">Coursera</a></li>
   <li><a href="http://www.behance.net/arnaudlevy" target="_blank">Behance</a></li>
 </ul>
