--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,5 +16,15 @@
         <%= yield %>
       </div>
     </main>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-11381831-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-11381831-1');
+    </script>
+
   </body>
 </html>
