--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,9 @@
 <%= image_tag('photo.jpg', alt: 'Arnaud Levy', class: 'photo') %>
 <h1>Arnaud Levy</h1>
-<h2>A la croisée de l'éthique, du code & de l'esthétique</h2>
+<h2>A la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
   Entrepreneur depuis 2003 (digitalisation des marques de luxe).
-  Maître de conférences en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et par blocs de compétences).
+  Maître de conférences en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et approche par compétences).
   Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et Javascript).
 </p>
 <ul class="follow">
