--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -1,126 +1,3 @@
-// http://meyerweb.com/eric/tools/css/reset/
-// v2.0 | 20110126
-// License: none (public domain)
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video
-  margin: 0
-  padding: 0
-  border: 0
-  font-size: 100%
-  font: inherit
-  vertical-align: baseline
-// HTML5 display-role reset for older browsers
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section
-  display: block
-body
-  line-height: 1
-ol, ul
-  list-style: none
-blockquote, q
-  quotes: none
-blockquote:before, blockquote:after, q:before, q:after
-  content: ''
-  content: none
-table
-  border-collapse: collapse
-  border-spacing: 0
-// End of reset
-
-
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i|Montserrat:700')
-
-body
-    background: black
-
-main
-    background: white
-    width: 300px
-    float: right
-
-    .content
-        padding: 40px
-
-    .photo
-        width: 100px
-        border-radius: 100%
-
-h1, p, a, li
-    font-family: 'EB Garamond', serif
-
-h1
-    font-size: 36px
-    font-weight: normal
-    margin-top: 40px
-    margin-bottom: 20px
-    letter-spacing: -1px
-    text-rendering: geometricPrecision
-
-h2
-    font-family: 'EB Garamond', serif
-    font-size: 24px
-    font-style: italic
-    line-height: 28px
-    margin-bottom: 20px
-    letter-spacing: -1px
-    text-rendering: geometricPrecision
-
-p
-    font-size: 18px
-    line-height: 24px
-    margin-bottom: 20px
-
-ul
-    list-style: none
-    li
-        line-height: 28px
-        a
-            font-family: 'Montserrat', sans-serif
-            font-size: 9px
-            font-weight: 700
-            letter-spacing: 1px
-            color: black
-            text-transform: uppercase
-            text-decoration: none
-            transition: all 0.5s
-            white-space: nowrap
-            &:hover
-                color: grey
-
-@media screen and (max-width: 640px)
-    main
-        float: none
-        margin: 70vh 0 0 0
-        width: 100%
-        .content
-            position: relative
-        .photo
-            top: -50px
-            position: absolute
-
-
-
-#background
-    z-index: -100
-    user-select: none
-    position: fixed
-    top: -50vh
-    left: -20vh
-    right: -20vh
-    bottom: -100vh
-#feed
-    width: 100%
-    height: 100%
-    align-items: flex-start
-    align-content: flex-start
-    display: flex
-    flex-direction: column
-    flex-wrap: wrap
-    transform-origin: center
-    transform: rotate(-25deg)
-    img
-        transition: opacity 0.5s ease-in-out
-        margin: 0
-        width: 200px
-
-@media screen and (max-width: 640px)
-    #feed img
-        width: 140px
+@import 'reset'
+@import 'style'
+@import 'background'
