--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag('photo.jpg', alt: 'Arnaud Levy', class: 'photo') %>
 <h1>Arnaud Levy</h1>
-<h2>A la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
+<h2>À la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
   Entrepreneur depuis 2003 (digitalisation des marques de luxe).
   Maître de conférences associé en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et approche par compétences).
