better on large screens

--- a/source/stylesheets/_background.sass
+++ b/source/stylesheets/_background.sass
@@ -24,3 +24,7 @@
 @media screen and (max-width: 640px)
     #feed img
         width: 140px
+
+@media screen and (min-width: 1280px)
+    #feed img
+        width: 260px
