--- a/source/stylesheets/_style.sass
+++ b/source/stylesheets/_style.sass
@@ -6,6 +6,7 @@ body
     main
         background: white
         width: 300px
+        min-height: 100vh
         float: right
         .content
             padding: 40px
