--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,13 +7,13 @@
   Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et Javascript).
 </p>
 <ul class="follow">
-  <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank">LinkedIn</a></li>
-  <li><a href="https://github.com/arnaudlevy" target="_blank">Github</a></li>
-  <li><a href="https://medium.com/arnaudlevy" target="_blank">Medium</a></li>
-  <li><a href="http://www.facebook.com/arnaudlevy" target="_blank">Facebook</a></li>
-  <li><a href="http://twitter.com/arnaudlevy" target="_blank">Twitter</a></li>
-  <li><a href="http://pinterest.com/arnaudlevy/" target="_blank">Pinterest</a></li>
-  <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank">Pluralsight</a></li>
-  <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank">Coursera</a></li>
-  <li><a href="http://www.behance.net/arnaudlevy" target="_blank">Behance</a></li>
+  <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank" rel="noopener">LinkedIn</a></li>
+  <li><a href="https://github.com/arnaudlevy" target="_blank" rel="noopener">Github</a></li>
+  <li><a href="https://medium.com/arnaudlevy" target="_blank" rel="noopener">Medium</a></li>
+  <li><a href="http://www.facebook.com/arnaudlevy" target="_blank" rel="noopener">Facebook</a></li>
+  <li><a href="http://twitter.com/arnaudlevy" target="_blank" rel="noopener">Twitter</a></li>
+  <li><a href="http://pinterest.com/arnaudlevy/" target="_blank" rel="noopener">Pinterest</a></li>
+  <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank" rel="noopener">Pluralsight</a></li>
+  <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank" rel="noopener">Coursera</a></li>
+  <li><a href="http://www.behance.net/arnaudlevy" target="_blank" rel="noopener">Behance</a></li>
 </ul>
