--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,9 +1,10 @@
 <!doctype html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Arnaud Levy, à la croisée de l'éthique, du code & de l'esthétique">
     <title><%= current_article.title + ' - ' unless current_article.nil? %>Arnaud Levy</title>
     <%= stylesheet_link_tag "site" %>
     <%= favicon_tag "logo.png" %>
