--- a/source/stylesheets/_style.sass
+++ b/source/stylesheets/_style.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i|Montserrat:400,700')
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i|Montserrat:400,700&display=swap')
 
 body
     background: black
