--- a/source/stylesheets/_style.sass
+++ b/source/stylesheets/_style.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i|Montserrat:400,700&display=swap')
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond:300,300i|Montserrat:400,700&display=swap')
 
 body
     background: black
@@ -32,19 +32,20 @@ a
 
 h1
     font-size: 36px
-    font-weight: normal
+    font-weight: 300
     margin-top: 40px
     margin-bottom: 20px
-    letter-spacing: -1px
+    letter-spacing: -0.2px
     text-rendering: geometricPrecision
 
 h2
     font-family: 'EB Garamond', serif
     font-size: 24px
+    font-weight: 300
     font-style: italic
     line-height: 28px
     margin-bottom: 20px
-    letter-spacing: -1px
+    letter-spacing: -0.2px
     text-rendering: geometricPrecision
     a
         text-decoration: none
