--- a/_sass/_style.sass
+++ b/_sass/_style.sass
@@ -20,6 +20,10 @@ body
             position: absolute
             margin-left: -300px
             margin-top: 30vh
+            margin-bottom: 30vh
+        img
+            max-width: 100%
+            margin-bottom: 30px
         h1
             margin-top: 0
 
