--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Arnaud Levy, à la croisée de l'éthique, du code & de l'esthétique">
     <title>{{ page.title }}</title>
     <link href="/assets/css/site.css" rel="stylesheet">
     <link href="/assets/images/logo.png" rel=icon type="image/png"/>
