font css parallel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Arnaud Levy, à la croisée de l'éthique, du code & de l'esthétique">
     <title>{{ page.title }}</title>
     <link href="/assets/css/site.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i|Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="/assets/images/logo.png" rel=icon type="image/png"/>
   </head>
   <body{% if page.layout == 'post' %} class="--blog"{% endif %}>
