opquast and bundle

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,4 +16,5 @@
   <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank" rel="noopener">Pluralsight</a></li>
   <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank" rel="noopener">Coursera</a></li>
   <li><a href="http://www.behance.net/arnaudlevy" target="_blank" rel="noopener">Behance</a></li>
+  <li><a href="https://directory.opquast.com/fr/certificat/A5MFPJ/" target="_blank" rel="noopener">Opquast</a></li>
 </ul>
