--- a/_sass/_style.sass
+++ b/_sass/_style.sass
@@ -93,6 +93,10 @@ ul
             .photo
                 top: -50px
                 position: absolute
-    ul li a
-        display: block
-        padding: 5px 0
+    ul
+      li
+        display: inline-block
+        a
+          display: block
+          padding: 15px 30px 15px 0
+          min-width: 100px
