--- a/_sass/_style.sass
+++ b/_sass/_style.sass
@@ -39,6 +39,15 @@ h1
     letter-spacing: -0.2px
     text-rendering: geometricPrecision
 
+p
+    a
+        text-decoration-thickness: 1px
+        text-decoration-color: #CCCCCC
+        text-underline-offset: 3px
+        transition: text-decoration .5s
+        &:hover
+            text-decoration-color: #000000
+
 h2
     font-family: 'EB Garamond', serif
     font-size: 24px
