--- a/_sass/_style.sass
+++ b/_sass/_style.sass
@@ -10,6 +10,7 @@ body
             padding: 40px
         .photo
             width: 100px
+            height: auto
             border-radius: 100%
     &.--blog
         main
@@ -88,6 +89,10 @@ ul
             white-space: nowrap
             &:hover
                 color: grey
+
+.legal
+    font-size: 12px
+    margin-top: 40px
 
 @media screen and (max-width: 640px)
     body, body.--blog
