--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,6 @@
         {{ content }}
       </div>
     </main>
-    <script src="/assets/js/site.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-11381831-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-11381831-1');
-    </script>
+    <script src="/assets/js/site.js" defer></script>
   </body>
 </html>
